--- a/sfm-jdbi/pom.xml
+++ b/sfm-jdbi/pom.xml
@@ -25,7 +25,6 @@
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
-				<version>2.5.4</version>
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
@@ -49,7 +48,6 @@
 			<artifactId>jdbi</artifactId>
 			<version>2.78</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
@@ -131,17 +129,8 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.20.1</version>
-						<dependencies>
-							<dependency>
-								<groupId>org.apache.maven.surefire</groupId>
-								<artifactId>maven-surefire-common</artifactId>
-								<version>2.20.1-pj10</version>
-							</dependency>
-						</dependencies>
-
 						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang=jdbi --add-opens org.simpleflatmapper.jdbi/org.simpleflatmapper.jdbi.test=jdbi</argLine>
 						</configuration>
 					</plugin>
 				</plugins>
