--- a/sfm-map/pom.xml
+++ b/sfm-map/pom.xml
@@ -84,7 +84,6 @@
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
-				<version>2.5.4</version>
 				<configuration>
 					<classifier>${jar.classifier}</classifier>
 					<instructions>
@@ -125,6 +124,13 @@
 						<goals>
 							<goal>test-jar</goal>
 						</goals>
+						<configuration>
+							<archive>
+								<manifestEntries>
+									<Automatic-Module-Name>org.simpleflatmapper.map.test</Automatic-Module-Name>
+								</manifestEntries>
+							</archive>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -256,43 +262,9 @@
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-
-						<executions>
-							<execution>
-								<id>default-testCompile</id>
-								<phase>test-compile</phase>
-								<configuration>
-									<fork>true</fork>
-									<compilerArgs>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.map/org.simpleflatmapper.map.context.impl=org.simpleflatmapper.map.test</arg>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.map/org.simpleflatmapper.map.impl=org.simpleflatmapper.map.test</arg>
-										<arg>--add-exports</arg>
-										<arg>org.simpleflatmapper.map/org.simpleflatmapper.map.asm=org.simpleflatmapper.map.test</arg>
-									</compilerArgs>
-								</configuration>
-								<goals>
-									<goal>testCompile</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.20.1</version>
-						<dependencies>
-							<dependency>
-								<groupId>org.apache.maven.surefire</groupId>
-								<artifactId>maven-surefire-common</artifactId>
-								<version>2.20.1-pj10</version>
-							</dependency>
-						</dependencies>
-
 						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-exports=org.simpleflatmapper.map/org.simpleflatmapper.test.map.mapper=org.simpleflatmapper.reflect --add-exports=org.simpleflatmapper.map/org.simpleflatmapper.test.map.impl=org.simpleflatmapper.reflect</argLine>
 						</configuration>
 					</plugin>
 				</plugins>
