--- a/sfm-test-sandbox-csv/pom.xml
+++ b/sfm-test-sandbox-csv/pom.xml
@@ -22,44 +22,22 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<source>8</source>
-					<target>8</target>
-					<excludes>
-						<exclude>**/module-info.java</exclude>
-					</excludes>
-
+					<source>9</source>
+					<target>9</target>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.ow2.asm</groupId>
+						<artifactId>asm</artifactId>
+						<version>6.1.1</version>
+					</dependency>
+				</dependencies>
 
-				<executions>
-					<execution>
-						<id>default-testCompile</id>
-						<phase>test-compile</phase>
-						<configuration>
-							<testExcludes>
-								<exclude>**/module-info.java</exclude>
-							</testExcludes>
-						</configuration>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-csv</artifactId>
-			<version>6.0.2-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-util</artifactId>
-			<version>6.0.2-SNAPSHOT</version>
-		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -71,13 +49,38 @@
 
 	</dependencies>
 
-
 	<profiles>
 		<profile>
 			<id>jdk19</id>
 			<activation>
 				<jdk>[9,12]</jdk>
 			</activation>
+
+			<dependencies>
+				<dependency>
+					<groupId>org.simpleflatmapper</groupId>
+					<artifactId>sfm-csv</artifactId>
+					<version>6.0.2-SNAPSHOT</version>
+					<classifier>jdk9</classifier>
+				</dependency>
+
+			</dependencies>
+		</profile>
+		<profile>
+			<id>jdk18</id>
+			<activation>
+				<jdk>1.8</jdk>
+			</activation>
+
+			<dependencies>
+				<dependency>
+					<groupId>org.simpleflatmapper</groupId>
+					<artifactId>sfm-csv</artifactId>
+					<version>6.0.2-SNAPSHOT</version>
+					<classifier></classifier>
+				</dependency>
+
+			</dependencies>
 			<build>
 				<plugins>
 
@@ -85,16 +88,26 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
 						<configuration>
-							<source>9</source>
-							<target>9</target>
+							<source>8</source>
+							<target>8</target>
 						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>org.ow2.asm</groupId>
-								<artifactId>asm</artifactId>
-								<version>6.1.1</version>
-							</dependency>
-						</dependencies>
+
+
+						<executions>
+							<execution>
+								<id>default-testCompile</id>
+								<phase>test-compile</phase>
+								<configuration>
+									<testExcludes>
+										<exclude>**/module-info.java</exclude>
+									</testExcludes>
+								</configuration>
+								<goals>
+									<goal>testCompile</goal>
+								</goals>
+							</execution>
+						</executions>
+
 					</plugin>
 				</plugins>
 			</build>
