--- a/pom.xml
+++ b/pom.xml
@@ -656,6 +656,7 @@
             </activation>
             <modules>
                 <module>sfm-test-sandbox</module>
+                <module>sfm-test-sandbox-csv</module>
                 <module>sfm-test-proto</module>
                 <module>sfm-test-osgi</module>
                 <!--<module>sfm-test-immutables</module>-->
