--- a/sfm-test-sandbox-csv/pom.xml
+++ b/sfm-test-sandbox-csv/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sfm-test-sandbox-csv</artifactId>
 	<packaging>jar</packaging>
 
-	<version>6.0.2-SNAPSHOT</version>
+	<version>6.0.2</version>
 
 	<licenses>
 		<license>
@@ -60,7 +60,7 @@
 				<dependency>
 					<groupId>org.simpleflatmapper</groupId>
 					<artifactId>sfm-csv</artifactId>
-					<version>6.0.2-SNAPSHOT</version>
+					<version>6.0.2</version>
 					<classifier>jdk9</classifier>
 				</dependency>
 
@@ -76,8 +76,8 @@
 				<dependency>
 					<groupId>org.simpleflatmapper</groupId>
 					<artifactId>sfm-csv</artifactId>
-					<version>6.0.2-SNAPSHOT</version>
-					<classifier></classifier>
+					<version>6.0.2</version>
+					<classifier />
 				</dependency>
 
 			</dependencies>
