--- a/sfm-test/pom.xml
+++ b/sfm-test/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>6.0.5</version>
+		<version>6.0.6-SNAPSHOT</version>
 	</parent>
 
 	<description>SFM common test objects.</description>
