--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>6.0.6-SNAPSHOT</version>
+		<version>6.0.6</version>
 	</parent>
 
 	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
@@ -32,39 +32,39 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>lightning-csv</artifactId>
-			<version>6.0.6-SNAPSHOT</version>
+			<version>6.0.6</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>6.0.6-SNAPSHOT</version>
+			<version>6.0.6</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
-			<version>6.0.6-SNAPSHOT</version>
+			<version>6.0.6</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>6.0.6-SNAPSHOT</version>
+			<version>6.0.6</version>
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-test</artifactId>
-            <version>6.0.6-SNAPSHOT</version>
+            <version>6.0.6</version>
             <scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>6.0.6-SNAPSHOT</version>
+			<version>6.0.6</version>
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
