--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>6.0.8-SNAPSHOT</version>
+		<version>6.0.8</version>
 	</parent>
 
 	<description>Cassandra Datastax SFM supports.</description>
@@ -63,13 +63,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>6.0.8-SNAPSHOT</version>
+			<version>6.0.8</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples</artifactId>
-			<version>6.0.8-SNAPSHOT</version>
+			<version>6.0.8</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map</artifactId>
-			<version>6.0.8-SNAPSHOT</version>
+			<version>6.0.8</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -91,14 +91,14 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>6.0.8-SNAPSHOT</version>
+			<version>6.0.8</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time</artifactId>
-			<version>6.0.8-SNAPSHOT</version>
+			<version>6.0.8</version>
 			<scope>test</scope>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
