fix #587 use columnClass as a fallback strategy first and as a primary one for alternative

--- a/sfm-test/pom.xml
+++ b/sfm-test/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.1.4.jre7</version>
+			<version>42.2.5</version>
 		</dependency>
 	</dependencies>
 
@@ -99,7 +99,7 @@
 				<dependency>
 					<groupId>org.postgresql</groupId>
 					<artifactId>postgresql</artifactId>
-					<version>9.4.1212.jre6</version>
+					<version>42.2.5.jre6</version>
 				</dependency>
 				<dependency>
 					<groupId>org.hsqldb</groupId>
