--- a/lightningcsv/pom.xml
+++ b/lightningcsv/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>6.0.9-SNAPSHOT</version>
+		<version>6.0.9</version>
 	</parent>
 
 	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-util</artifactId>
-			<version>6.0.9-SNAPSHOT</version>
+			<version>6.0.9</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 
