--- a/sfm-springjdbc/pom.xml
+++ b/sfm-springjdbc/pom.xml
@@ -8,7 +8,7 @@
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<version>6.6.1-SNAPSHOT</version>
+		<version>6.6.1</version>
 		<artifactId>sfm-parent</artifactId>
 	</parent>
 
@@ -50,13 +50,13 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>6.6.1-SNAPSHOT</version>
+			<version>6.6.1</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>6.6.1-SNAPSHOT</version>
+			<version>6.6.1</version>
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
