specify guava version for java6-7

--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -151,6 +151,14 @@
 			<activation>
 				<jdk>1.6</jdk>
 			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+					<version>18.0</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>
 			<build>
 				<plugins>
 					<plugin>
@@ -178,6 +186,14 @@
 			<activation>
 				<jdk>1.7</jdk>
 			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+					<version>18.0</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>
 			<build>
 				<plugins>
 					<plugin>
