--- a/sfm-test-lombok/pom.xml
+++ b/sfm-test-lombok/pom.xml
@@ -38,13 +38,25 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-csv</artifactId>
+			<version>6.6.2</version>
+			<classifier>${jar.classifier}</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-jdbc</artifactId>
+			<version>6.6.2</version>
+			<classifier>${jar.classifier}</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-test</artifactId>
 			<version>6.7.1-SNAPSHOT</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.12</version>
+			<version>1.18.6</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -94,22 +106,14 @@
 							<source>9</source>
 							<target>9</target>
 							<fork>true</fork>
-							<compilerArgs>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-								<arg>-J-XaddExports:jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-							</compilerArgs>
+							<optimise>true</optimise>
+							<parameters>false</parameters>
 						</configuration>
 						<dependencies>
 							<dependency>
 								<groupId>org.ow2.asm</groupId>
 								<artifactId>asm</artifactId>
-								<version>6.2</version>
+								<version>7.0</version>
 							</dependency>
 						</dependencies>
 					</plugin>
