#659 mark dependencies jooq/spring-jdbc etc... provided

--- a/sfm-jooq/pom.xml
+++ b/sfm-jooq/pom.xml
@@ -47,8 +47,8 @@
 		<dependency>
 			<groupId>org.jooq</groupId>
 			<artifactId>jooq</artifactId>
-			<!--<version>3.9.5</version>-->
-			<version>3.11.5</version>
+			<version>3.11.11</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
