--- a/sfm-poi/pom.xml
+++ b/sfm-poi/pom.xml
@@ -52,6 +52,7 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.17</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
