--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -53,6 +53,7 @@
 					<artifactId>netty-transport-native-epoll</artifactId>
 				</exclusion>
 			</exclusions>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
@@ -104,6 +105,7 @@
 	</dependencies>
 	<profiles>
 		<profile>
+			<id>cassandra2</id>
 			<activation>
 				<jdk>[1.6,1.9)</jdk>
 			</activation>
