--- a/sfm-jdbi/pom.xml
+++ b/sfm-jdbi/pom.xml
@@ -47,6 +47,7 @@
 			<groupId>org.jdbi</groupId>
 			<artifactId>jdbi</artifactId>
 			<version>2.78</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
