--- a/sfm-springjdbc/pom.xml
+++ b/sfm-springjdbc/pom.xml
@@ -45,6 +45,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
