result set native contextual getter

--- a/sfm-test-osgi/pom.xml
+++ b/sfm-test-osgi/pom.xml
@@ -52,6 +52,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
 			<version>6.7.1-SNAPSHOT</version>
