exclude dummy class

--- a/ow2.asm/ASM_5_2/pom.xml
+++ b/ow2.asm/ASM_5_2/pom.xml
@@ -47,6 +47,9 @@
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <useDefaultManifestFile>true</useDefaultManifestFile>
+            <excludes>
+                <exclude>**/Dummy.class</exclude>
+            </excludes>
         </configuration>
       </plugin>
       <plugin>
