--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<version>7.0.3-SNAPSHOT</version>
+		<version>7.0.3</version>
 		<artifactId>sfm-parent</artifactId>
 	</parent>
 
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>7.0.3-SNAPSHOT</version>
+			<version>7.0.3</version>
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>7.0.3-SNAPSHOT</version>
+			<version>7.0.3</version>
 			<classifier>${jar.classifier}</classifier>
 			<scope>test</scope>
 		</dependency>
