--- a/sfm-test-sandbox/pom.xml
+++ b/sfm-test-sandbox/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sfm-test-sandbox</artifactId>
 	<packaging>jar</packaging>
 
-	<version>7.0.3-SNAPSHOT</version>
+	<version>7.0.3</version>
 
 	<licenses>
 		<license>
@@ -62,14 +62,14 @@
 				<dependency>
 					<groupId>org.simpleflatmapper</groupId>
 					<artifactId>sfm-csv</artifactId>
-					<version>7.0.3-SNAPSHOT</version>
+					<version>7.0.3</version>
 					<classifier>jdk9</classifier>
 				</dependency>
 
 				<dependency>
 					<groupId>org.simpleflatmapper</groupId>
 					<artifactId>sfm-jdbc</artifactId>
-					<version>7.0.3-SNAPSHOT</version>
+					<version>7.0.3</version>
 					<classifier>jdk9</classifier>
 				</dependency>
 			</dependencies>
@@ -84,14 +84,14 @@
 				<dependency>
 					<groupId>org.simpleflatmapper</groupId>
 					<artifactId>sfm-csv</artifactId>
-					<version>7.0.3-SNAPSHOT</version>
+					<version>7.0.3</version>
 					<classifier />
 				</dependency>
 
 				<dependency>
 					<groupId>org.simpleflatmapper</groupId>
 					<artifactId>sfm-jdbc</artifactId>
-					<version>7.0.3-SNAPSHOT</version>
+					<version>7.0.3</version>
 					<classifier />
 				</dependency>
 			</dependencies>
