--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<version>8.0.0-jre9</version>
+		<version>8.0.1-SNAPSHOT</version>
 		<artifactId>sfm-parent</artifactId>
 	</parent>
 
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc</artifactId>
-			<version>8.0.0-jre9</version>
+			<version>8.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mysema.querydsl</groupId>
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>8.0.0-jre9</version>
+			<version>8.0.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
