--- a/sfm-converter-joda-time/pom.xml
+++ b/sfm-converter-joda-time/pom.xml
@@ -10,6 +10,7 @@
 		<version>8.0.1-SNAPSHOT</version>
 	</parent>
 
+	<name>sfm-converter-joda-time</name>
 	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
 
 	<developers>
