--- a/sfm-etl/pom.xml
+++ b/sfm-etl/pom.xml
@@ -1,12 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>sfm-etl</artifactId>
+	<artifactId>sfm-etl-jre6</artifactId>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<artifactId>sfm-parent</artifactId>
+		<artifactId>sfm-parent-jre6</artifactId>
 		<version>2.7.5-SNAPSHOT</version>
 	</parent>
 
@@ -38,12 +38,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-jdbc</artifactId>
+			<artifactId>sfm-jdbc-jre6</artifactId>
 			<version>2.15-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-test</artifactId>
+			<artifactId>sfm-test-jre6</artifactId>
 			<version>2.15-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
