--- a/sfm-jmh/pom.xml
+++ b/sfm-jmh/pom.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
 Copyright (c) 2005, 2014, Oracle and/or its affiliates. All rights reserved.
 DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 
@@ -26,7 +25,7 @@ questions.
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.simpleflatmapper</groupId>
-    <artifactId>sfm-jmh</artifactId>
+    <artifactId>sfm-jmh-jre6</artifactId>
     <version>8.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -51,12 +50,12 @@ questions.
         </dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
-            <artifactId>sfm-jdbc</artifactId>
+            <artifactId>sfm-jdbc-jre6</artifactId>
             <version>8.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
-            <artifactId>sfm-csv</artifactId>
+            <artifactId>sfm-csv-jre6</artifactId>
             <version>8.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
