--- a/sfm-springbatch/pom.xml
+++ b/sfm-springbatch/pom.xml
@@ -1,7 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>sfm-springbatch</artifactId>
+	<artifactId>sfm-springbatch-jre6</artifactId>
 	<packaging>bundle</packaging>
 
 	<description>SpringBatch supports.</description>
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<version>3.6-SNAPSHOT</version>
-		<artifactId>sfm-parent</artifactId>
+		<artifactId>sfm-parent-jre6</artifactId>
 	</parent>
 
 	<licenses>
@@ -45,12 +45,12 @@
 
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-csv</artifactId>
+			<artifactId>sfm-csv-jre6</artifactId>
 			<version>3.6-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-test</artifactId>
+			<artifactId>sfm-test-jre6</artifactId>
 			<version>3.6-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
