[maven-release-plugin] prepare release sfm-8.0.0-jre9

--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -10,7 +10,7 @@
         		
         <groupId>org.simpleflatmapper</groupId>
         		
-        <version>8.0.1-SNAPSHOT</version>
+        <version>8.0.0</version>
         		
         <artifactId>sfm-parent-jre9</artifactId>
         	
@@ -80,7 +80,7 @@
             			
             <artifactId>sfm-jdbc-jre9</artifactId>
             			
-            <version>8.0.1-SNAPSHOT</version>
+            <version>8.0.0</version>
             		
         </dependency>
         		
@@ -114,7 +114,7 @@
             			
             <artifactId>sfm-test-jre9</artifactId>
             			
-            <version>8.0.1-SNAPSHOT</version>
+            <version>8.0.0</version>
             			
             <scope>test</scope>
             		
