--- a/sfm-converter-joda-time/pom.xml
+++ b/sfm-converter-joda-time/pom.xml
@@ -12,7 +12,7 @@
         		
         <artifactId>sfm-parent-jre9</artifactId>
         		
-        <version>8.0.1-SNAPSHOT</version>
+        <version>8.0.0</version>
         	
     </parent>
     	
@@ -64,7 +64,7 @@
             			
             <artifactId>sfm-converter-jre9</artifactId>
             			
-            <version>8.0.1-SNAPSHOT</version>
+            <version>8.0.0</version>
             		
         </dependency>
                 
@@ -74,7 +74,7 @@
                         
             <artifactId>sfm-util-jre9</artifactId>
             			
-            <version>8.0.1-SNAPSHOT</version>
+            <version>8.0.0</version>
             		
         </dependency>
         		
@@ -84,7 +84,7 @@
             			
             <artifactId>sfm-converter-jre9</artifactId>
             			
-            <version>8.0.1-SNAPSHOT</version>
+            <version>8.0.0</version>
             			
             <scope>test</scope>
             			
